[project]
name = "lti-1.3-python-library"
version = "0.0.1"
description = "A library used for building IMS-certified LTI 1.3 tool providers in Python."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pyjwt",
]

[project.urls]
Homepage = "https://github.com/TedCha/lti-1.3-python-library"
Issues = "https://github.com/TedCha/lti-1.3-python-library/issues"